--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "autoprefixer": "^7.1.2",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^7.0.0",
+    "gulp-watch": "^4.3.11",
+    "postcss-nested": "^2.1.2",
+    "postcss-simple-vars": "^4.0.0"
   }
 }
