--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
     "gulp-watch": "^4.3.11",
+    "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^10.0.0",
+    "postcss-mixins": "^6.0.1",
     "postcss-nested": "^2.1.2",
     "postcss-simple-vars": "^4.0.0"
   }
